--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.env
+
+
 # dependencies
 /node_modules
 /.pnp
@@ -10,7 +13,6 @@
 
 # production
 /build
-
 # misc
 .DS_Store
 .env.local
