added tests for counter

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "node-sass": "^6.0.1",
@@ -38,6 +37,9 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.7"
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "eslint": "^7.32.0",
+    "prettier": "^2.4.0"
   }
 }
