--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongodb": "^4.6.0",
     "mongoose": "^5.13.0"
   },
   "devDependencies": {
